# pardoc

./: .pre-commit-config.yaml  .pylintrc  .tagitrc  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yml
pardoc/: __init__.py  default.py  google.py  liquidpy.py  numpy.py  parsed.py
tests/: test_google.py  test_liquidpy.py  test_numpy.py
