[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pardoc"
version = "0.1.0"
description = "Yet another docstring parser for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pardoc"
repository = "https://github.com/pwwang/pardoc"

[tool.poetry.dependencies]
python = "^3.7"
lark-parser = "^0.12"
diot = "^0.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
flake8 = "^4"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short --cov-config=.coveragerc --cov=pardoc --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
