[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pardoc"
version = "0.2.0"
description = "Yet another docstring parser for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pardoc"
repository = "https://github.com/pwwang/pardoc"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.2"
diot = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^6"
flake8 = "^7"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short --cov-config=.coveragerc --cov=pardoc --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
